--- a/ngrok-tricks.ipynb
+++ b/ngrok-tricks.ipynb
@@ -54,7 +54,8 @@
         "#!ln -s /content/drive/My\\ Drive ~/drive\n",
         "!mkdir -p /drive\n",
         "#umount /drive\n",
-        "!mount --bind /content/drive/My\\ Drive /drive"
+        "!mount --bind /content/drive/My\\ Drive /drive",
+        "!mkdir -p /drive/ngrok-ssh"
       ],
       "execution_count": 1,
       "outputs": [
