--- a/ngrok-tricks.ipynb
+++ b/ngrok-tricks.ipynb
@@ -55,7 +55,8 @@
         "!mkdir -p /drive\n",
         "#umount /drive\n",
         "!mount --bind /content/drive/My\\ Drive /drive",
-        "!mkdir -p /drive/ngrok-ssh"
+        "!mkdir -p /drive/ngrok-ssh",
+        "!mkdir -p ~/.ssh"
       ],
       "execution_count": 1,
       "outputs": [
