--- a/ngrok-tricks.ipynb
+++ b/ngrok-tricks.ipynb
@@ -54,9 +54,9 @@
         "#!ln -s /content/drive/My\\ Drive ~/drive\n",
         "!mkdir -p /drive\n",
         "#umount /drive\n",
-        "!mount --bind /content/drive/My\\ Drive /drive",
-        "!mkdir -p /drive/ngrok-ssh",
-        "!mkdir -p ~/.ssh"
+        "!mount --bind /content/drive/My\\ Drive /drive\n",
+        "!mkdir -p /drive/ngrok-ssh\n",
+        "!mkdir -p ~/.ssh\n"
       ],
       "execution_count": 1,
       "outputs": [
@@ -103,6 +103,7 @@
         "import pprint\n",
         "import tensorflow as tf\n",
         "\n",
+        "import os\n",
         "if 'COLAB_TPU_ADDR' not in os.environ:\n",
         "  print('Not connected to a TPU runtime')\n",
         "else:\n",
