--- a/ngrok-tricks.ipynb
+++ b/ngrok-tricks.ipynb
@@ -50,15 +50,13 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive', force_remount=True)\n",
         "\n",
-        "#!rm -f ~/drive\n",
-        "#!ln -s /content/drive/My\\ Drive ~/drive\n",
         "!mkdir -p /drive\n",
         "#umount /drive\n",
         "!mount --bind /content/drive/My\\ Drive /drive\n",
         "!mkdir -p /drive/ngrok-ssh\n",
-        "!mkdir -p ~/.ssh\n"
+        "!mkdir -p ~/.ssh"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +111,7 @@
         "  print('TPU devices:')\n",
         "  pprint.pprint(devices)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +162,7 @@
       "source": [
         "!apt-get install ssh tmux vim"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -343,11 +341,11 @@
       "metadata": {
         "id": "0v5HMu_nfROT",
         "colab_type": "code",
+        "outputId": "bf13dfd0-23cc-455d-ba39-7300cf171725",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "bf13dfd0-23cc-455d-ba39-7300cf171725"
+        }
       },
       "source": [
         "%%writefile /drive/ngrok-ssh/sshd_config\n",
@@ -474,7 +472,7 @@
         "#\tPermitTTY no\n",
         "#\tForceCommand cvs server"
       ],
-      "execution_count": 89,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,17 +503,17 @@
       "metadata": {
         "id": "wmyQ60pehfYu",
         "colab_type": "code",
+        "outputId": "8c28b951-f55c-443c-f04d-cbff9a54ab01",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "8c28b951-f55c-443c-f04d-cbff9a54ab01"
+        }
       },
       "source": [
         "%%writefile ~/.ssh/authorized_keys\n",
         "REPLACE_THIS_LINE_WITH_YOUR_ID_RSA_PUB_FILE"
       ],
-      "execution_count": 96,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,7 +550,7 @@
         "!service ssh restart\n",
         "!mkdir -p ~/.ssh"
       ],
-      "execution_count": 97,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -579,11 +577,11 @@
       "metadata": {
         "id": "1B_aC562JbJU",
         "colab_type": "code",
+        "outputId": "286cc14d-2218-4ba2-8b7c-b6bbd99a6c8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 247
-        },
-        "outputId": "286cc14d-2218-4ba2-8b7c-b6bbd99a6c8c"
+        }
       },
       "source": [
         "!mkdir -p /drive/ngrok-ssh\n",
@@ -593,7 +591,7 @@
         "!cp /drive/ngrok-ssh/ngrok /ngrok\n",
         "!chmod +x /ngrok"
       ],
-      "execution_count": 94,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -637,16 +635,16 @@
       "metadata": {
         "id": "4k-1v9HPhBBG",
         "colab_type": "code",
+        "outputId": "fdde4dfd-05f5-4405-c60c-46e80ea7c049",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "fdde4dfd-05f5-4405-c60c-46e80ea7c049"
+        }
       },
       "source": [
         "!/ngrok authtoken PASTE_YOUR_AUTHTOKEN_HERE"
       ],
-      "execution_count": 95,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,11 +672,11 @@
       "metadata": {
         "id": "RyDVTHD2PnRI",
         "colab_type": "code",
+        "outputId": "40dab8d3-84ad-4fdb-c6bd-347c150e7825",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "40dab8d3-84ad-4fdb-c6bd-347c150e7825"
+        }
       },
       "source": [
         "%%writefile /drive/ngrok-ssh/ssh.yml\n",
@@ -687,7 +685,7 @@
         "    proto: tcp\n",
         "    addr: 22"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -703,11 +701,11 @@
       "metadata": {
         "id": "OewiP50wPzpl",
         "colab_type": "code",
+        "outputId": "e6204ba5-97e1-4b78-e35a-1964cab4d03c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "e6204ba5-97e1-4b78-e35a-1964cab4d03c"
+        }
       },
       "source": [
         "%%writefile /drive/ngrok-ssh/tensorboard.yml\n",
@@ -718,7 +716,7 @@
         "    inspect: false\n",
         "    bind_tls: true"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,11 +732,11 @@
       "metadata": {
         "id": "mcTC95zkRAA7",
         "colab_type": "code",
+        "outputId": "c6b36fd0-a1c6-4075-ef1d-40817f876e5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c6b36fd0-a1c6-4075-ef1d-40817f876e5c"
+        }
       },
       "source": [
         "%%writefile /drive/ngrok-ssh/http8080.yml\n",
@@ -749,7 +747,7 @@
         "    inspect: false\n",
         "    bind_tls: true"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,11 +763,11 @@
       "metadata": {
         "id": "jUBa9tBMTCQK",
         "colab_type": "code",
+        "outputId": "5f3b7d71-b539-4af0-eb50-54a65d3c510d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5f3b7d71-b539-4af0-eb50-54a65d3c510d"
+        }
       },
       "source": [
         "%%writefile /drive/ngrok-ssh/tcp8080.yml\n",
@@ -778,7 +776,7 @@
         "    proto: tcp\n",
         "    addr: 8080"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -794,11 +792,11 @@
       "metadata": {
         "id": "Ui8IvOpCQGAD",
         "colab_type": "code",
+        "outputId": "31eaadf7-223b-4fcb-98d6-21c9b7b724f4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "31eaadf7-223b-4fcb-98d6-21c9b7b724f4"
+        }
       },
       "source": [
         "import os\n",
@@ -812,7 +810,7 @@
         "\"\"\".format(os.environ['COLAB_TPU_ADDR']).strip())\n",
         "  print('Wrote /drive/ngrok-ssh/tpu.yml')"
       ],
-      "execution_count": 87,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -828,11 +826,11 @@
       "metadata": {
         "id": "nT0-i3VoKjco",
         "colab_type": "code",
+        "outputId": "41ca301e-66ce-4140-846a-077357ab4813",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "41ca301e-66ce-4140-846a-077357ab4813"
+        }
       },
       "source": [
         "%%writefile /drive/ngrok-ssh/run_ngrok.sh\n",
@@ -840,7 +838,7 @@
         "set -x\n",
         "/ngrok start --config ~/.ngrok2/ngrok.yml --config /drive/ngrok-ssh/ssh.yml --log=stdout --config /drive/ngrok-ssh/tensorboard.yml --config /drive/ngrok-ssh/http8080.yml --config /drive/ngrok-ssh/tcp8080.yml --config /drive/ngrok-ssh/tpu.yml \"$@\""
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,16 +881,16 @@
       "metadata": {
         "id": "kcj4Q_K9SF4v",
         "colab_type": "code",
+        "outputId": "dc772b10-003b-4f6b-dd18-522e70bfee48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
-        },
-        "outputId": "dc772b10-003b-4f6b-dd18-522e70bfee48"
+        }
       },
       "source": [
         "!ps aux | grep ngrok"
       ],
-      "execution_count": 59,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -975,16 +973,16 @@
       "metadata": {
         "id": "_Nm37gOgT8Fs",
         "colab_type": "code",
+        "outputId": "55e00bd5-64e1-499f-bc51-b670bcf5dcd6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 338
-        },
-        "outputId": "55e00bd5-64e1-499f-bc51-b670bcf5dcd6"
+        }
       },
       "source": [
         "#!bash /drive/ngrok-ssh/run_ngrok.sh ssh tensorboard tcp8080 tpu"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1016,16 +1014,16 @@
       "metadata": {
         "id": "Vr6wsoUyKojz",
         "colab_type": "code",
+        "outputId": "3a699985-ca7f-42dc-e5ee-61d5d72b2d6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3a699985-ca7f-42dc-e5ee-61d5d72b2d6a"
+        }
       },
       "source": [
         "#!curl -s http://localhost:4040/api/tunnels  | python3 -c \"import sys, json; url=json.load(sys.stdin)['tunnels'][0]['public_url']; import urllib.parse; print(urllib.parse.urlparse(url).netloc)\""
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1068,16 +1066,16 @@
       "metadata": {
         "id": "ZnWHZoJLNVbs",
         "colab_type": "code",
+        "outputId": "223b8e57-0687-45bb-cde9-0fdfe6ed286c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 125
-        },
-        "outputId": "223b8e57-0687-45bb-cde9-0fdfe6ed286c"
+        }
       },
       "source": [
         "!ps aux | grep tensorboard"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1107,16 +1105,16 @@
       "metadata": {
         "id": "cdVQ9TDrZONX",
         "colab_type": "code",
+        "outputId": "9cb97925-2b37-464a-ca08-03dc7252e238",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9cb97925-2b37-464a-ca08-03dc7252e238"
+        }
       },
       "source": [
         "print('To view tensorboard, visit', get_ngrok_url('tensorboard'))"
       ],
-      "execution_count": 66,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,11 +1142,11 @@
       "metadata": {
         "id": "d28SLwBxZd4F",
         "colab_type": "code",
+        "outputId": "3b2af0da-43b6-4c9f-c334-c918b32e94e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
-        },
-        "outputId": "3b2af0da-43b6-4c9f-c334-c918b32e94e7"
+        }
       },
       "source": [
         "for name, tunnel in get_ngrok_tunnels():\n",
@@ -1156,7 +1154,7 @@
         "  public_url = get_ngrok_url(name, local=False)\n",
         "  print('{:12s} {} <-> {}'.format(name, public_url, local_url))"
       ],
-      "execution_count": 85,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1185,11 +1183,11 @@
       "metadata": {
         "id": "BM-qgXeJWUb4",
         "colab_type": "code",
+        "outputId": "9f32ef56-a387-4f6d-8f3a-ac4338b05598",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 87
-        },
-        "outputId": "9f32ef56-a387-4f6d-8f3a-ac4338b05598"
+        }
       },
       "source": [
         "print('')\n",
@@ -1199,7 +1197,7 @@
         "\n",
         "print('  ssh -p {} root@{}'.format(public_port, public_url))"
       ],
-      "execution_count": 65,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
