Elide long outputs

--- a/ngrok-tricks.ipynb
+++ b/ngrok-tricks.ipynb
@@ -153,174 +153,14 @@
       "metadata": {
         "id": "J_WEZOLUyTs2",
         "colab_type": "code",
-        "outputId": "f1dc1ce5-a309-4bd4-90cd-9ce00922b1a9",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+        "colab": {},
+        "cellView": "code"
       },
       "source": [
         "!apt-get install ssh tmux vim"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  libevent-2.1-6 libgpm2 libutempter0 ncurses-term openssh-server\n",
-            "  openssh-sftp-server python3-certifi python3-chardet python3-idna\n",
-            "  python3-pkg-resources python3-requests python3-six python3-urllib3\n",
-            "  ssh-import-id vim-common vim-runtime xxd\n",
-            "Suggested packages:\n",
-            "  gpm molly-guard monkeysphere rssh ssh-askpass ufw python3-setuptools\n",
-            "  python3-cryptography python3-openssl python3-socks ctags vim-doc vim-scripts\n",
-            "The following NEW packages will be installed:\n",
-            "  libevent-2.1-6 libgpm2 libutempter0 ncurses-term openssh-server\n",
-            "  openssh-sftp-server python3-certifi python3-chardet python3-idna\n",
-            "  python3-pkg-resources python3-requests python3-six python3-urllib3 ssh\n",
-            "  ssh-import-id tmux vim vim-common vim-runtime xxd\n",
-            "0 upgraded, 20 newly installed, 0 to remove and 35 not upgraded.\n",
-            "Need to get 8,264 kB of archives.\n",
-            "After this operation, 41.3 MB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 openssh-sftp-server amd64 1:7.6p1-4ubuntu0.3 [45.6 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 openssh-server amd64 1:7.6p1-4ubuntu0.3 [333 kB]\n",
-            "Get:3 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 ssh all 1:7.6p1-4ubuntu0.3 [5,204 B]\n",
-            "Get:4 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 xxd amd64 2:8.0.1453-1ubuntu1.1 [49.2 kB]\n",
-            "Get:5 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 vim-common all 2:8.0.1453-1ubuntu1.1 [70.4 kB]\n",
-            "Get:6 http://archive.ubuntu.com/ubuntu bionic/main amd64 libevent-2.1-6 amd64 2.1.8-stable-4build1 [133 kB]\n",
-            "Get:7 http://archive.ubuntu.com/ubuntu bionic/main amd64 libgpm2 amd64 1.20.7-5 [15.1 kB]\n",
-            "Get:8 http://archive.ubuntu.com/ubuntu bionic/main amd64 libutempter0 amd64 1.1.6-3 [7,898 B]\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 ncurses-term all 6.1-1ubuntu1.18.04 [248 kB]\n",
-            "Get:10 http://archive.ubuntu.com/ubuntu bionic/main amd64 python3-certifi all 2018.1.18-2 [144 kB]\n",
-            "Get:11 http://archive.ubuntu.com/ubuntu bionic/main amd64 python3-pkg-resources all 39.0.1-2 [98.8 kB]\n",
-            "Get:12 http://archive.ubuntu.com/ubuntu bionic/main amd64 python3-chardet all 3.0.4-1 [80.3 kB]\n",
-            "Get:13 http://archive.ubuntu.com/ubuntu bionic/main amd64 python3-idna all 2.6-1 [32.5 kB]\n",
-            "Get:14 http://archive.ubuntu.com/ubuntu bionic/main amd64 python3-six all 1.11.0-2 [11.4 kB]\n",
-            "Get:15 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 python3-urllib3 all 1.22-1ubuntu0.18.04.1 [86.0 kB]\n",
-            "Get:16 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 python3-requests all 2.18.4-2ubuntu0.1 [58.3 kB]\n",
-            "Get:17 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 tmux amd64 2.6-3ubuntu0.2 [248 kB]\n",
-            "Get:18 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 vim-runtime all 2:8.0.1453-1ubuntu1.1 [5,435 kB]\n",
-            "Get:19 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 vim amd64 2:8.0.1453-1ubuntu1.1 [1,152 kB]\n",
-            "Get:20 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 ssh-import-id all 5.7-0ubuntu1.1 [10.9 kB]\n",
-            "Fetched 8,264 kB in 10s (841 kB/s)\n",
-            "Preconfiguring packages ...\n",
-            "Selecting previously unselected package openssh-sftp-server.\n",
-            "(Reading database ... 132684 files and directories currently installed.)\n",
-            "Preparing to unpack .../00-openssh-sftp-server_1%3a7.6p1-4ubuntu0.3_amd64.deb ...\n",
-            "Unpacking openssh-sftp-server (1:7.6p1-4ubuntu0.3) ...\n",
-            "Selecting previously unselected package openssh-server.\n",
-            "Preparing to unpack .../01-openssh-server_1%3a7.6p1-4ubuntu0.3_amd64.deb ...\n",
-            "Unpacking openssh-server (1:7.6p1-4ubuntu0.3) ...\n",
-            "Selecting previously unselected package ssh.\n",
-            "Preparing to unpack .../02-ssh_1%3a7.6p1-4ubuntu0.3_all.deb ...\n",
-            "Unpacking ssh (1:7.6p1-4ubuntu0.3) ...\n",
-            "Selecting previously unselected package xxd.\n",
-            "Preparing to unpack .../03-xxd_2%3a8.0.1453-1ubuntu1.1_amd64.deb ...\n",
-            "Unpacking xxd (2:8.0.1453-1ubuntu1.1) ...\n",
-            "Selecting previously unselected package vim-common.\n",
-            "Preparing to unpack .../04-vim-common_2%3a8.0.1453-1ubuntu1.1_all.deb ...\n",
-            "Unpacking vim-common (2:8.0.1453-1ubuntu1.1) ...\n",
-            "Selecting previously unselected package libevent-2.1-6:amd64.\n",
-            "Preparing to unpack .../05-libevent-2.1-6_2.1.8-stable-4build1_amd64.deb ...\n",
-            "Unpacking libevent-2.1-6:amd64 (2.1.8-stable-4build1) ...\n",
-            "Selecting previously unselected package libgpm2:amd64.\n",
-            "Preparing to unpack .../06-libgpm2_1.20.7-5_amd64.deb ...\n",
-            "Unpacking libgpm2:amd64 (1.20.7-5) ...\n",
-            "Selecting previously unselected package libutempter0:amd64.\n",
-            "Preparing to unpack .../07-libutempter0_1.1.6-3_amd64.deb ...\n",
-            "Unpacking libutempter0:amd64 (1.1.6-3) ...\n",
-            "Selecting previously unselected package ncurses-term.\n",
-            "Preparing to unpack .../08-ncurses-term_6.1-1ubuntu1.18.04_all.deb ...\n",
-            "Unpacking ncurses-term (6.1-1ubuntu1.18.04) ...\n",
-            "Selecting previously unselected package python3-certifi.\n",
-            "Preparing to unpack .../09-python3-certifi_2018.1.18-2_all.deb ...\n",
-            "Unpacking python3-certifi (2018.1.18-2) ...\n",
-            "Selecting previously unselected package python3-pkg-resources.\n",
-            "Preparing to unpack .../10-python3-pkg-resources_39.0.1-2_all.deb ...\n",
-            "Unpacking python3-pkg-resources (39.0.1-2) ...\n",
-            "Selecting previously unselected package python3-chardet.\n",
-            "Preparing to unpack .../11-python3-chardet_3.0.4-1_all.deb ...\n",
-            "Unpacking python3-chardet (3.0.4-1) ...\n",
-            "Selecting previously unselected package python3-idna.\n",
-            "Preparing to unpack .../12-python3-idna_2.6-1_all.deb ...\n",
-            "Unpacking python3-idna (2.6-1) ...\n",
-            "Selecting previously unselected package python3-six.\n",
-            "Preparing to unpack .../13-python3-six_1.11.0-2_all.deb ...\n",
-            "Unpacking python3-six (1.11.0-2) ...\n",
-            "Selecting previously unselected package python3-urllib3.\n",
-            "Preparing to unpack .../14-python3-urllib3_1.22-1ubuntu0.18.04.1_all.deb ...\n",
-            "Unpacking python3-urllib3 (1.22-1ubuntu0.18.04.1) ...\n",
-            "Selecting previously unselected package python3-requests.\n",
-            "Preparing to unpack .../15-python3-requests_2.18.4-2ubuntu0.1_all.deb ...\n",
-            "Unpacking python3-requests (2.18.4-2ubuntu0.1) ...\n",
-            "Selecting previously unselected package tmux.\n",
-            "Preparing to unpack .../16-tmux_2.6-3ubuntu0.2_amd64.deb ...\n",
-            "Unpacking tmux (2.6-3ubuntu0.2) ...\n",
-            "Selecting previously unselected package vim-runtime.\n",
-            "Preparing to unpack .../17-vim-runtime_2%3a8.0.1453-1ubuntu1.1_all.deb ...\n",
-            "Adding 'diversion of /usr/share/vim/vim80/doc/help.txt to /usr/share/vim/vim80/doc/help.txt.vim-tiny by vim-runtime'\n",
-            "Adding 'diversion of /usr/share/vim/vim80/doc/tags to /usr/share/vim/vim80/doc/tags.vim-tiny by vim-runtime'\n",
-            "Unpacking vim-runtime (2:8.0.1453-1ubuntu1.1) ...\n",
-            "Selecting previously unselected package vim.\n",
-            "Preparing to unpack .../18-vim_2%3a8.0.1453-1ubuntu1.1_amd64.deb ...\n",
-            "Unpacking vim (2:8.0.1453-1ubuntu1.1) ...\n",
-            "Selecting previously unselected package ssh-import-id.\n",
-            "Preparing to unpack .../19-ssh-import-id_5.7-0ubuntu1.1_all.deb ...\n",
-            "Unpacking ssh-import-id (5.7-0ubuntu1.1) ...\n",
-            "Setting up ncurses-term (6.1-1ubuntu1.18.04) ...\n",
-            "Setting up libevent-2.1-6:amd64 (2.1.8-stable-4build1) ...\n",
-            "Processing triggers for mime-support (3.60ubuntu1) ...\n",
-            "Setting up xxd (2:8.0.1453-1ubuntu1.1) ...\n",
-            "Setting up libgpm2:amd64 (1.20.7-5) ...\n",
-            "Setting up python3-idna (2.6-1) ...\n",
-            "Setting up python3-six (1.11.0-2) ...\n",
-            "Setting up python3-certifi (2018.1.18-2) ...\n",
-            "Setting up python3-pkg-resources (39.0.1-2) ...\n",
-            "Setting up libutempter0:amd64 (1.1.6-3) ...\n",
-            "Setting up openssh-sftp-server (1:7.6p1-4ubuntu0.3) ...\n",
-            "Processing triggers for libc-bin (2.27-3ubuntu1) ...\n",
-            "Setting up python3-chardet (3.0.4-1) ...\n",
-            "Processing triggers for systemd (237-3ubuntu10.31) ...\n",
-            "Setting up vim-common (2:8.0.1453-1ubuntu1.1) ...\n",
-            "Setting up tmux (2.6-3ubuntu0.2) ...\n",
-            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
-            "Setting up vim-runtime (2:8.0.1453-1ubuntu1.1) ...\n",
-            "Setting up python3-urllib3 (1.22-1ubuntu0.18.04.1) ...\n",
-            "Processing triggers for hicolor-icon-theme (0.17-2) ...\n",
-            "Setting up vim (2:8.0.1453-1ubuntu1.1) ...\n",
-            "update-alternatives: using /usr/bin/vim.basic to provide /usr/bin/vim (vim) in auto mode\n",
-            "update-alternatives: using /usr/bin/vim.basic to provide /usr/bin/vimdiff (vimdiff) in auto mode\n",
-            "update-alternatives: using /usr/bin/vim.basic to provide /usr/bin/rvim (rvim) in auto mode\n",
-            "update-alternatives: using /usr/bin/vim.basic to provide /usr/bin/rview (rview) in auto mode\n",
-            "update-alternatives: using /usr/bin/vim.basic to provide /usr/bin/vi (vi) in auto mode\n",
-            "update-alternatives: using /usr/bin/vim.basic to provide /usr/bin/view (view) in auto mode\n",
-            "update-alternatives: using /usr/bin/vim.basic to provide /usr/bin/ex (ex) in auto mode\n",
-            "update-alternatives: using /usr/bin/vim.basic to provide /usr/bin/editor (editor) in auto mode\n",
-            "Setting up openssh-server (1:7.6p1-4ubuntu0.3) ...\n",
-            "\n",
-            "Creating config file /etc/ssh/sshd_config with new version\n",
-            "Creating SSH2 RSA key; this may take some time ...\n",
-            "2048 SHA256:mmq6A+PQaLXC8tPYty7WBRKx1n8ZgMsOoCafE7BBsvM root@3c23b9622498 (RSA)\n",
-            "Creating SSH2 ECDSA key; this may take some time ...\n",
-            "256 SHA256:+pDIuueGT8YvM5JrJMpJGzOge2nRQ/wb9XTzo/pX6qI root@3c23b9622498 (ECDSA)\n",
-            "Creating SSH2 ED25519 key; this may take some time ...\n",
-            "256 SHA256:MvGwnV7V9Le8BsMkyLwRNnvn5GkniO/KYhhO6TbxUPA root@3c23b9622498 (ED25519)\n",
-            "Created symlink /etc/systemd/system/sshd.service → /lib/systemd/system/ssh.service.\n",
-            "Created symlink /etc/systemd/system/multi-user.target.wants/ssh.service → /lib/systemd/system/ssh.service.\n",
-            "invoke-rc.d: could not determine current runlevel\n",
-            "invoke-rc.d: policy-rc.d denied execution of start.\n",
-            "Setting up python3-requests (2.18.4-2ubuntu0.1) ...\n",
-            "Setting up ssh-import-id (5.7-0ubuntu1.1) ...\n",
-            "Setting up ssh (1:7.6p1-4ubuntu0.3) ...\n",
-            "Processing triggers for systemd (237-3ubuntu10.31) ...\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -345,9 +185,11 @@
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "cellView": "form"
       },
       "source": [
+        "#@title\n",
         "%%writefile /drive/ngrok-ssh/sshd_config\n",
         "#\t$OpenBSD: sshd_config,v 1.101 2017/03/14 07:19:07 djm Exp $\n",
         "\n",
