--- a/ngrok-tricks.ipynb
+++ b/ngrok-tricks.ipynb
@@ -99,17 +99,22 @@
       "source": [
         "import os\n",
         "import pprint\n",
+        "%tensorflow_version 2.x\n",
         "import tensorflow as tf\n",
         "\n",
-        "if 'COLAB_TPU_ADDR' not in os.environ:\n",
-        "  print('Not connected to a TPU runtime')\n",
-        "else:\n",
+        "if 'COLAB_TPU_ADDR' in os.environ:\n",
         "  tpu_address = 'grpc://' + os.environ['COLAB_TPU_ADDR']\n",
         "  print ('TPU address is', tpu_address)\n",
-        "  with tf.Session(tpu_address) as session:\n",
-        "    devices = session.list_devices()\n",
-        "  print('TPU devices:')\n",
-        "  pprint.pprint(devices)"
+        "  tpu = tf.distribute.cluster_resolver.TPUClusterResolver()  # TPU detection\n",
+        "  assert os.environ['COLAB_TPU_ADDR'] == tpu.cluster_spec().as_dict()['worker'][0]\n",
+        "  tf.config.experimental_connect_to_cluster(tpu)\n",
+        "  tf.distribute.experimental.TPUStrategy(tpu)\n",
+        "else:\n",
+        "  gpu=tf.config.get_visible_devices('GPU')\n",
+        "  if gpu:\n",
+        "    print('Running on GPU', gpu)\n",
+        "  else:\n",
+        "    print('Not connected to TPU/GPU runtime')"
       ],
       "execution_count": 0,
       "outputs": [
@@ -287,7 +292,7 @@
         "#PrintLastLog yes\n",
         "#TCPKeepAlive yes\n",
         "#UseLogin no\n",
-        "#PermitUserEnvironment no\n",
+        "PermitUserEnvironment yes\n",
         "#Compression delayed\n",
         "#ClientAliveInterval 0\n",
         "#ClientAliveCountMax 3\n",
@@ -323,6 +328,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!env | sed -E \"s/=(.*[<>].*)/=\\'\\1\\'/\" >> ~/.ssh/environment"
       ]
     },
     {
@@ -650,7 +664,8 @@
         "    proto: tcp\n",
         "    addr: {}\n",
         "\"\"\".format(os.environ['COLAB_TPU_ADDR']).strip())\n",
-        "  print('Wrote /drive/ngrok-ssh/tpu.yml')"
+        "  print('Wrote /drive/ngrok-ssh/tpu.yml')\n",
+        "!touch /drive/ngrok-ssh/tpu.yml # File existence is required for following commands"
       ],
       "execution_count": 0,
       "outputs": [
